# Product_data_pipelining

./: .dockerignore  .env.example  .gitignore  .user.yml  CLAUDE.md  CNAME  Dockerfile  README.md  app.py  appb.py  appc.py  cloudrun.yaml  docker-compose.yml  docker-entrypoint.sh  env_example.txt  generate_fake_data.py  index.html  minio_upload.py  packages.yml  pdp_config.env  pep8_changes.txt  portfolio_app.py  profiles.example.yml  profiles.yml  pyproject.toml  requirements.txt  setup.py  streamlit_app.py  tempCodeRunnerFile.python
.dbt/: .user.yml  profiles.yml
.devcontainer/: devcontainer.json
agents/: data-analyst.md  data-engineer.md  python-pro.md  tech-lead.md  ui-designer.md
app/: portfolio_app.py
data/: cleaned_data.csv  cleaned_data.parquet  simulated_api_data.csv  simulated_api_data.parquet
dbt_pipeline_demo/: .gitignore  dbt_project.yml  packages.yml
dbt_pipeline_demo/databases/: dbt_pipeline_demo.duckdb  prod.duckdb
dbt_pipeline_demo/models/: dim_user.sql  product_schema.sql  schema.yml
dbt_pipeline_demo/models/dimensions/: dim_platform.sql  dim_product.sql  dim_user.sql
dbt_pipeline_demo/models/docs/: overview.md
dbt_pipeline_demo/models/fact/: fact_user_activity.sql
dbt_pipeline_demo/models/marts/: dim_locations.sql  dim_products.sql  fact_prices.sql  mart_category_distribution.sql  mart_location_sales.sql  mart_price_by_category.sql
dbt_pipeline_demo/models/staging/: stg_locations.sql  stg_prices.sql  stg_product_schema.sql  stg_products.sql  stg_user_activity.sql
docs/: CNAME  catalog.json  manifest.json
hooks/: block-env-read.sh
metrics/: cleaning_metrics_20250124.csv  cleaning_metrics_20250205.csv  cleaning_metrics_20250207.csv  cleaning_metrics_20250208.csv  quality_metrics_20250117.csv  quality_metrics_20250128.csv  quality_metrics_20250130.csv  quality_metrics_20250207.csv
portfolio_app/: app.py
portfolio_app/scripts/: analytics_queries.py  constants.py  main_data_pipeline.py  main_pipeline.py
reports/: business_analysis.csv  business_analysis_20250126_150921.csv  churn_analysis.csv  churn_analysis_by_engagement_level_20250117_191534.csv  churn_analysis_by_engagement_level_20250123_163905.csv  churn_analysis_by_platform_20250117_195108.csv  churn_analysis_by_platform_20250123_174414.csv  churn_analysis_by_price_tier_20250117_191534.csv  churn_analysis_by_price_tier_20250123_153458.csv  churn_analysis_by_purchase_behavior_20250117_183433.csv  churn_analysis_by_purchase_behavior_20250117_191534.csv  churn_analysis_by_time_cohorts_20250117_195108.csv  churn_analysis_by_time_cohorts_20250123_153458.csv  company_and_job_title_impact_on_purchases_20250117_195108.csv  company_and_job_title_impact_on_purchases_20250124_190954.csv  customer_lifecycle_analysis_20250117_183433.csv  customer_lifecycle_analysis_20250117_195108.csv  customer_lifecycle_analysis_20250118_221652.csv  customer_lifecycle_analysis_20250123_171116.csv  customer_lifecycle_analysis_20250124_190954.csv  demographics_analysis.csv  demographics_analysis_20250126_145844.csv  engagement_analysis.csv  engagement_analysis_20250126_145844.csv  engagement_analysis_20250126_150921.csv  funnel_analysis.csv  funnel_analysis_overall_funnel_20250126_150921.csv  funnel_analysis_product_breakdown_20250126_150921.csv  lifecycle_analysis.csv  lifecycle_analysis_20250126_150921.csv  purchase_analysis.csv  purchase_analysis_by_product_and_status_20250117_191142.csv  purchase_analysis_by_product_and_status_20250124_190954.csv  query_performance_20250117_152827.csv  query_performance_20250117_183433.csv  query_performance_20250117_191142.csv  query_performance_20250117_191534.csv  query_performance_20250117_195108.csv  query_performance_20250118_221652.csv  query_performance_20250123_153458.csv  (+42 more)
scripts/: analytics_queries.py  connect_to_S3-query_data.py  constants.py  generate_fake_data.py  main_data_pipeline.py  minio_upload.py  queries_cleaning.py  query_duckdb.py  tempCodeRunnerFile.py
