[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbt-pipeline-demo"
version = "4.0.0"
description = "A demo pipeline for product data generation and processing"
authors = [
    { name = "Bruce Anthony Lee", email = "brucelee352@gmail.com" }
]

readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
requires-python = ">= 3.9"

keywords = ["Data Engineering", "Data Pipelines", "SaaS", "Data", "Analytics Engineering", "Data Science", "Data Visualization"]


dependencies = [
    "duckdb>=0.8.1",
    "minio>=7.1.0",
    "pandas>=2.0.0",
    "faker>=18.0.0",
    "dbt-core>=1.5.0",
    "dbt-duckdb>=1.5.0",
    "python-dotenv>=1.0.0",
    "user-agents>=2.2.0",
    "streamlit>=1.28.0",
    "plotly>=5.15.0",
]


classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Database",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://brucelee352.github.io"
Documentation = "https://github.com/Brucelee352/Product_data_pipelining/blob/main/README.md"
Repository = "https://github.com/Brucelee352/Product_data_pipelining.git"
"LinkedIn" = "https://www.linkedin.com/in/brucealee/"


[project.scripts]
run-pipeline = "scripts.main_data_pipeline:main_cli"
dashboard = "app:main_cli"

[project.gui-scripts]
run-pipeline = "scripts.main_data_pipeline:main_gui"
dashboard = "app:main_gui"

# Add this Hatch-specific configuration section
[tool.hatch.build]
include = [
    "dbt_pipeline_demo/**/*.sql",
    "dbt_pipeline_demo/**/*.yml",
    "scripts/**/*.py",
    "app/**/*.py"
]

[tool.hatch.build.targets.wheel]
# Explicitly specify packages to include
packages = [
    "dbt_pipeline_demo",
    "scripts",
    "app"
]

# Include non-Python files
sources = [
    "dbt_pipeline_demo/models/",
    "scripts"
] 