[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbt-pipeline-demo"
version = "4.0.0"
description = "A demo pipeline for product data generation and processing"
authors = [
    { name = "Bruce Anthony Lee", email = "brucelee352@gmail.com" }
]

readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
requires-python = ">= 3.9"

keywords = ["Data Engineering", "Data Pipelines", "SaaS", "Data", "Analytics Engineering", "Data Science", "Data Visualization"]


dependencies = [
    "duckdb>=1.4.4",
    "minio>=7.2.20",
    "pandas>=3.0.1",
    "faker>=40.8.0",
    "dbt-core>=1.11.7",
    "dbt-duckdb>=1.10.1",
    "python-dotenv>=1.2.2",
    "user-agents>=2.2.0",
    "plotly>=6.6.0",
    "dash>=4.0.0",
    "dash-bootstrap-components>=2.0.4",
    "mashumaro>=3.14",
]


classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Database",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://brucelee352.github.io"
Documentation = "https://github.com/Brucelee352/Product_data_pipelining/blob/main/README.md"
Repository = "https://github.com/Brucelee352/Product_data_pipelining.git"
"LinkedIn" = "https://www.linkedin.com/in/brucealee/"


[project.scripts]
run-pipeline = "scripts.main_data_pipeline:main_cli"
dashboard = "app:main_cli"

[project.gui-scripts]
run-pipeline = "scripts.main_data_pipeline:main_gui"
dashboard = "app:main_gui"

# Add this Hatch-specific configuration section
[tool.hatch.build]
include = [
    "dbt_pipeline_demo/**/*.sql",
    "dbt_pipeline_demo/**/*.yml",
    "scripts/**/*.py",
    "app/**/*.py"
]

[tool.hatch.build.targets.wheel]
# Explicitly specify packages to include
packages = [
    "dbt_pipeline_demo",
    "scripts",
    "app"
]

# Include non-Python files
sources = [
    "dbt_pipeline_demo/models/",
    "scripts"
] 