[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kroger_product_pipeline"
version = "5.0.0"
description = "A demo pipeline for product data generation and processing using data from the Kroger Products/Locations APIs"
authors = [
    { name = "Bruce Anthony Lee", email = "brucelee352@gmail.com" }
]

readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">= 3.12, < 3.13"

keywords = ["Data Engineering", "Data Pipelines", "SaaS", "Data", "Analytics Engineering", "Data Science", "Data Visualization"]


dependencies = [
    "duckdb>=1.4.4",
    "pandas>=3.0.1",
    "requests>=2.32.0",
    "dbt-core>=1.11.7",
    "dbt-duckdb>=1.10.1",
    "python-dotenv>=1.2.2",
    "plotly>=6.0.0",
    "dash>=2.18.0",
    "dash-bootstrap-components>=1.6.0",
    "gunicorn>=26.0.0",
]


classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Database",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://kro.brucea-lee.com"
Documentation = "https://github.com/Brucelee352/Product_data_pipelining/blob/main/README.md"
Repository = "https://github.com/Brucelee352/Product_data_pipelining.git"
"LinkedIn" = "https://www.linkedin.com/in/brucealee/"


[project.scripts]
run-pipeline = "portfolio_app.scripts.main_pipeline:main"
dashboard = "portfolio_app.app:main"

# Add this Hatch-specific configuration section
[tool.hatch.build]
include = [
    "dbt_pipeline_demo/**/*.sql",
    "dbt_pipeline_demo/**/*.yml",
    "portfolio_app/**/*.py"
]

[tool.hatch.build.targets.wheel]
# Explicitly specify packages to include
packages = [
    "dbt_pipeline_demo",
    "portfolio_app"
]

# Include non-Python files
sources = [
    "dbt_pipeline_demo/models/",
    "portfolio_app"
]
